添加页面 Signed-off-by: wuqd <wuqd@chinasap.cn>

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul class="nav nav-pills" role="tablist">
-            <li role="presentation" class="active"><a href="dist/views/index.html">Home</a></li>
+            <li role="presentation" class="active"><a href="/dist/views/index.html">Home</a></li>
             <li role="presentation"><a href="#">Profile</a></li>
             <li role="presentation"><a href="#">Messages</a></li>
         </ul>
