--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div><!-- /.container-fluid -->
     </nav>
     <div class="page-body">
-        <div class="content-list">
+        <div class="content-list" id="articleList">
         </div>
     </div>
     <script src="dist/scripts/lib/jadann.js"></script>
