--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Jadann_Bolg_WebSite</title>
     <link rel="stylesheet" href="dist/contents/bootstrap.min.css">
-    <link rel="stylesheet" href="dist/contents/index.css">
+    <link rel="stylesheet" href="dist/contents/common.min.css">
+    <link rel="stylesheet" href="src/contents/index.css">
 </head>
 <body>
     <nav class="navbar navbar-default" role="navigation">
